--- a/app/src/main/res/layout/custome_equine_solution_screen.xml
+++ b/app/src/main/res/layout/custome_equine_solution_screen.xml
@@ -344,7 +344,7 @@
                         android:id="@+id/iv_agricultur_land"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        app:srcCompat="@drawable/ic_agriculturallands"/>
+                        app:srcCompat="@drawable/ic_horsetrainer"/>
 
                     <TextView
                         android:id="@+id/tv_labour"
@@ -375,7 +375,7 @@
                         android:id="@+id/iv_pesticides"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        app:srcCompat="@drawable/ic_pesticides"/>
+                        app:srcCompat="@drawable/ic_breeding"/>
 
                     <TextView
                         android:id="@+id/bt_pesticide"
