--- a/app/src/main/res/layout/pets_fragment.xml
+++ b/app/src/main/res/layout/pets_fragment.xml
@@ -120,17 +120,54 @@
                         android:layout_marginRight="5dp"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        app:srcCompat="@drawable/ic_accessories"/>
+                        app:srcCompat="@drawable/ic_pets"/>
 
                     <TextView
                         android:id="@+id/tv_accessories"
-                        android:text="Accessories     "
+                        android:text="Pets Solution       "
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="@color/colorWhite"
                         android:textAllCaps="false"
                         android:textSize="12sp"
                         android:layout_centerInParent="true"/>
+
+
+                </LinearLayout>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/bt_sale_pets"
+                android:layout_width="180dp"
+                android:layout_height="@dimen/et_width"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/button_press_syle"
+                android:layout_marginTop="10dp">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_centerInParent="true">
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/imageView3"
+                        android:layout_marginRight="5dp"
+                        android:layout_width="20dp"
+                        android:layout_height="15dp"
+                        app:srcCompat="@drawable/ic_pets"/>
+
+                    <TextView
+                        android:id="@+id/tv_sale_pets"
+                        android:text="Sale Pets           "
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/colorWhite"
+                        android:textAllCaps="false"
+                        android:textSize="12sp"
+                        android:layout_centerInParent="true"/>
+
 
 
                 </LinearLayout>
